Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-70032

drawText() crashes it is called in a loop to draw symbols/glyphs

    XMLWordPrintable

Details

    • Windows
    • 3ccdeb4b58b681bb3a0a43f926f81fd94f527680 (qt/qtbase/5.12)

    Description

      Drawing a lot of glyphs instantiating QFont in a loop over unicode characters up to 0x8000 and point size eventually fails and application crashes

       

      drawText() persistently  crashes when executed in large loop for symbols/glyphs for a font family. It does draw few but at the end crashes with following message:

      Attached example reproduces it.

       

      QWindowsFontEngine::QWindowsFontEngine: CreateFontIndirect failed for family 'STFangsong' ()
      
      QPixmap::fromWinHICON(), failed to GetIconInfo() ()
      
      QWindowsBackingStore::flush: GetDC failed ()
      
      ASSERT: "hdc" in file qwindowsnativeimage.cpp, line 66
      
      createDIB: CreateDIBSection failed.

      Attachments

        For Gerrit Dashboard: QTBUG-70032
        # Subject Branch Project Status CR V

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            irfan.omair@digia.com Irfan Omair
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes